refactor: remove everywhere basic auth with platform admin, fix deps